--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -3,6 +3,7 @@ FROM valyriantech/comfyui-without-flux:latest
 # Install git
 RUN apt-get update && apt-get install -y git
 RUN mkdir -p facerestore_models
+RUN mkdir -p flux
 
 # Due to the fact that the models are in a gated repository, we need to download them separately BEFORE building this image and store them locally in a folder called flux
 # https://huggingface.co/black-forest-labs/FLUX.1-dev/blob/main/ae.sft
