--- a/comfyui-with-flux/Dockerfile
+++ b/comfyui-with-flux/Dockerfile
@@ -1,9 +1,11 @@
 FROM valyriantech/comfyui-without-flux:latest
 
 # Install git
-RUN apt-get update && apt-get install -y git
+RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
 RUN mkdir -p facerestore_models
 RUN mkdir -p flux
+RUN mkdir -p /ComfyUI/models/facerestore_models
+COPY facerestore_models /ComfyUI/models/facerestore_models/
 
 # Due to the fact that the models are in a gated repository, we need to download them separately BEFORE building this image and store them locally in a folder called flux
 # https://huggingface.co/black-forest-labs/FLUX.1-dev/blob/main/ae.sft
